auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 8000
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 8000
          - path: /profiles
            pathType: Prefix
            backend:
              service:
                name: profiles-service
                port:
                  number: 8000
